# fastapi-demo

./: Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  init.bat  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-deploy.yml  deploy-frontend.yml
alembic/: env.py
alembic/versions/: 00de50e3e891_auto_vote.py  23133f2bceb9_create_posts_table.py  35abda68ccc6_add_phone_number.py  ab8aaf0fc6ad_add_foreign_key_to_posts_table.py  b199d1154382_add_content_column_to_posts_table.py  cd2879b501d7_add_user_table.py  d88d747d452e_add_last_few_columns_to_posts_table.py  f978a6f39381_add_comments_table.py  fc81e7faa05e_add_notifications_table.py
app/: __init__.py  calculations.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  cloudinary_upload.py  comment.py  notification.py  post.py  user.py  vote.py
frontend/: app.js  dashboard.html  index.html  style.css
tests/: conftest.py  database.py  test_calculations.py  test_cloudinary_upload.py  test_comments.py  test_notifications.py  test_posts.py  test_users.py  test_votes.py
