[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.137.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
]
